--- a/src/app/components/alumnos/alta-alumnos/alta-alumnos.component.html
+++ b/src/app/components/alumnos/alta-alumnos/alta-alumnos.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Crear Alumno</h1>
+<h1 mat-dialog-title>{{ titulo }}</h1>
 <div mat-dialog-content>
   <form [formGroup]="formAlumno">
     <mat-form-field>
