--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,15 @@
+<div class="row">
+  <div class="col-12">
+    <app-menu></app-menu>
+
+    <div class="col-2">
+      <app-toolbar></app-toolbar>
+    </div>
+
+  </div>
+
+</div>
+
 <div class="grid-container">
-  <app-menu class="grid-header"></app-menu>
-  <app-toolbar class="grid-menu"></app-toolbar>
-  <app-lista-alumnos class="grid-students"></app-lista-alumnos>
+    <router-outlet ></router-outlet>
 </div>
