--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
 <div class="row">
-  <div class="col-12">
+  <div class="col-md-12">
     <app-menu></app-menu>
-
-    <div class="col-2">
-      <app-toolbar></app-toolbar>
-    </div>
-
   </div>
-
 </div>
-
-<div class="grid-container">
+<div class="row">
+  <div class="col-md-2">
+    <app-toolbar></app-toolbar>
+  </div>
+  <div class="col-md-9">
+    <br>
     <router-outlet ></router-outlet>
+  </div>
 </div>
+
+
