--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -10,6 +10,11 @@
           Alumnos
         </a>
       </li>
+      <li>
+        <a mat-button routerLink="usuarios">
+          Usuarios
+        </a>
+      </li>
       
     </ul>
     
