--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,16 +1,16 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 10%;height: 100%;position:fixed;">
+<div class="text-white bg-dark" style="height: 100%">
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
         <a mat-button routerLink="cursos">
           Cursos
         </a>
       </li>
-      <li>
+      <li class="nav-item">
         <a mat-button routerLink="alumnos">
           Alumnos
         </a>
       </li>
-      <li>
+      <li class="nav-item">
         <a mat-button routerLink="usuarios">
           Usuarios
         </a>
