--- a/src/app/login/components/login/login.component.html
+++ b/src/app/login/components/login/login.component.html
@@ -12,14 +12,19 @@
     <div class="row">
         <div class="col-md-4">
             <mat-form-field>
-                <mat-label>Contrasena</mat-label>
-                <input matInput formControlName="contrasena">
+                <mat-label>Contraseña</mat-label>
+                <input matInput [type]="hide ? 'password' : 'text'" formControlName="contrasena">
+                <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+
             </mat-form-field>
+            
         </div>
     </div>
     <div>
         <div class="col-md-4">
-            <button type="submit" mat-raised-button color="primary">Entrar</button>
+            <button [disabled]="!formulario.valid" type="submit" mat-raised-button color="primary">Entrar</button>
         </div>
     </div>
 </form>
