--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,23 +1,43 @@
-<div class="text-white bg-dark" style="height: 100%">
-    <ul class="nav nav-pills flex-column mb-auto">
-      <li class="nav-item">
-        <a mat-button routerLink="cursos">
-          Cursos
-        </a>
-      </li>
-      <li class="nav-item">
-        <a mat-button routerLink="alumnos">
-          Alumnos
-        </a>
-      </li>
-      <li class="nav-item">
-        <a mat-button routerLink="usuarios">
-          Usuarios
-        </a>
-      </li>
-      
-    </ul>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <button mat-icon-button>
+      <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+    </button>
+    <h1>Entrega Final</h1>
+    <span class="toolbar-espacio"></span>
     
-</div>
+      <div *ngIf="sesion$ | async as sesion" class="text-white">
+        <div *ngIf="sesion.islogged">
+          <h1>{{ 'Usuario: ' + sesion.usuario?.Nombre }}
+            <button mat-icon-button>
+              <mat-icon (click)="logout()">logout</mat-icon>
+            </button>
+          </h1>
+          
+        </div>
+        <div *ngIf="!sesion.islogged">
+          <button mat-icon-button>
+            <mat-icon routerLink="login">login</mat-icon>
+          </button>
+        </div>
+      </div>
+  </mat-toolbar-row>
+</mat-toolbar>
 
+<mat-sidenav-container>
+  <mat-sidenav #sidenav>
+    <mat-nav-list>
+      <a mat-list-item routerLink="cursos"> Cursos </a>
+      <a mat-list-item routerLink="alumnos"> Alumnos </a>
+      <a mat-list-item routerLink="usuarios"> Usuarios </a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div style="height: 88vh;">
+      <div class="container" style="margin-top: 10px;">
+      <router-outlet></router-outlet>
+    </div>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
 
