--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -8,16 +8,13 @@
     
       <div *ngIf="sesion$ | async as sesion" class="text-white">
         <div *ngIf="sesion.islogged">
-          <h1>{{ 'Usuario: ' + sesion.usuario?.Nombre }}
-            <button mat-icon-button>
-              <mat-icon (click)="logout()">logout</mat-icon>
-            </button>
-          </h1>
-          
+          <button mat-icon-button>
+            <mat-icon (click)="logout()">logout</mat-icon>
+          </button>
         </div>
         <div *ngIf="!sesion.islogged">
           <button mat-icon-button>
-            <mat-icon routerLink="login">login</mat-icon>
+            <mat-icon routerLink="Login">login</mat-icon>
           </button>
         </div>
       </div>
@@ -27,16 +24,24 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav>
     <mat-nav-list>
-      <a mat-list-item routerLink="cursos"> Cursos </a>
-      <a mat-list-item routerLink="alumnos"> Alumnos </a>
-      <a mat-list-item routerLink="usuarios"> Usuarios </a>
+      <a mat-list-item (click)="sidenav.toggle()" routerLink="Cursos"> Cursos </a>
+      <a mat-list-item (click)="sidenav.toggle()" routerLink="Alumnos"> Alumnos </a>
+      <a mat-list-item (click)="sidenav.toggle()" routerLink="Usuarios"> Usuarios </a>
+      <div *ngIf="sesion$ | async as sesion" >
+        <div [hidden]="!sesion.islogged">
+          <hr>
+            <a mat-list-item class="text-primary" >
+            Logged: <br> {{ sesion.usuario?.Nombre }}
+          </a>
+        </div>
+      </div>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <div style="height: 88vh;">
       <div class="container" style="margin-top: 10px;">
-      <router-outlet></router-outlet>
-    </div>
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
