--- a/src/app/cursos/components/cursos-detalle/cursos-detalle.component.html
+++ b/src/app/cursos/components/cursos-detalle/cursos-detalle.component.html
@@ -1,1 +1,18 @@
-<p>cursos-detalle works!</p>
+<h1>Detalle de Curso</h1>
+
+<div *ngIf="(curso$ | async) == undefined">
+    <mat-spinner style="margin:0 auto;" diameter="40"></mat-spinner>
+</div>
+
+<mat-card class="example-card">
+    <div *ngIf="curso$ | async as curso">
+        <mat-card-title-group>
+            <mat-card-title>{{ curso.Nombre }}</mat-card-title>
+            <mat-card-subtitle>{{curso.Profesor}}</mat-card-subtitle>
+            <mat-card-subtitle>Fecha de Inicio: {{curso.FechaInicio | date: 'dd/MM/yyyy'}}</mat-card-subtitle>
+        </mat-card-title-group>
+    </div>
+    <mat-card-actions>
+        <button mat-button routerLink="/Cursos">Volver</button>
+    </mat-card-actions>
+</mat-card>
