--- a/src/app/alumnos/components/lista-alumnos/lista-alumnos.component.html
+++ b/src/app/alumnos/components/lista-alumnos/lista-alumnos.component.html
@@ -4,11 +4,11 @@
     <button mat-raised-button (click)="openDialog()">Agregar Alumno</button>
 </div>
 <br>
-<div *ngIf="dataInicial == undefined">
+<div *ngIf="dataInicial.length == 0">
     <mat-spinner style="margin:0 auto;" diameter="40"></mat-spinner>
 </div>
 
-<div *ngIf="dataInicial != undefined">
+<div *ngIf="dataInicial.length > 0">
 <mat-table [dataSource]="dataInicial">
     <ng-container matColumnDef="nombre">
         <mat-header-cell *matHeaderCellDef appFuente20>Nombre</mat-header-cell>
@@ -29,24 +29,6 @@
             </button>
         </mat-cell>
     </ng-container>
-
-    <!-- <ng-container matColumnDef="editar">
-        <mat-header-cell *matHeaderCellDef></mat-header-cell>
-        <mat-cell *matCellDef="let alumno">
-            <button mat-icon-button>
-                <mat-icon (click)="openDialog(alumno)">edit</mat-icon>
-            </button>
-        </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="eliminar">
-        <mat-header-cell *matHeaderCellDef></mat-header-cell>
-        <mat-cell *matCellDef="let alumno">
-            <button mat-icon-button>
-                <mat-icon (click)="eliminar(alumno.Id)">delete</mat-icon>   
-            </button>
-        </mat-cell>
-    </ng-container> -->
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
