--- a/src/app/cursos/components/cursos-listado/cursos-listado.component.html
+++ b/src/app/cursos/components/cursos-listado/cursos-listado.component.html
@@ -1,4 +1,8 @@
 <h1>Cursos</h1>
+<div class="d-flex justify-content-left w-100">
+    <button mat-raised-button [routerLink]="'/Cursos/Crear'">Agregar Curso</button>
+</div>
+<br>
 
 <div class="row">
     
